fix review wrap 768

--- a/styles/index.css
+++ b/styles/index.css
@@ -914,9 +914,9 @@ a {
   height: -moz-max-content;
   height: max-content;
   -moz-column-count: 2;
-       column-count: 2;
+  column-count: 2;
   -moz-column-gap: 10px;
-       column-gap: 10px;
+  column-gap: 10px;
   line-height: 22px;
 }
 
@@ -1176,7 +1176,7 @@ a {
   .container__article {
     margin-bottom: 120px;
     -moz-column-count: 1;
-         column-count: 1;
+    column-count: 1;
   }
   .psy__slide-768px {
     display: none;
@@ -1189,6 +1189,9 @@ a {
   }
   .slide__right {
     padding-left: 25px;
+  }
+  .review__slide:last-child {
+    display: none;
   }
   .footer {
     height: 428px;
@@ -1509,7 +1512,7 @@ a {
     padding-left: 170px;
     margin: 10px;
   }
-  .psy__slide:nth-child(n+2) {
+  .psy__slide:nth-child(n + 2) {
     display: none;
   }
   .review__slide:last-child {
@@ -1522,7 +1525,7 @@ a {
   .container__article {
     margin-bottom: 60px;
     -moz-column-count: 1;
-         column-count: 1;
+    column-count: 1;
     font-size: 14px;
     line-height: 21px;
   }
@@ -1892,4 +1895,4 @@ a {
   .help__profi-second img {
     width: 230px;
   }
-}/*# sourceMappingURL=index.css.map */
+} /*# sourceMappingURL=index.css.map */
